# matb-yarp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/joy_stick_control/: CMakeLists.txt  joystickControl.ini
app/matb/: CMakeLists.txt
app/matb/json/: CMakeLists.txt  communication_task.json  control.json  matb.json  matb_experiment.json  matb_experiment_long.json  resource_management_task.json  scheduling_task.json  system_monitoring_task.json  tracking_task.json
app/matb/xml/: communication_task.xml  multi_attribute_task_battery_event.xml  resource_management_task.xml  scheduling_task.xml  start.xml  system_monitoring_task.xml  tracking_task.xml
app/yarp_manager/: CMakeLists.txt  matb.xml
cmake/: CMakeLists.txt  matbConfig.cmake.in  matbConfigVersion.cmake.in
src/: CMakeLists.txt
src/matb/: CMakeLists.txt
src/matb/Qt/: CMakeLists.txt
src/matb/Qt/qt_widget/: CMakeLists.txt
src/matb/Qt/qt_widget/matb_viewer_widget/: CMakeLists.txt  matb_viewer_widget.cpp  matb_viewer_widget.hpp
src/matb/algorithm/: CMakeLists.txt
src/matb/algorithm/communications_task/: CMakeLists.txt  communications_task.cpp  communications_task.hpp
src/matb/algorithm/matb_event/: CMakeLists.txt  communication_event.cpp  communication_event.hpp  matb_event.cpp  matb_event.hpp  matb_event_base.cpp  matb_event_base.hpp  resource_management_event.cpp  resource_management_event.hpp  scheduling_event.cpp  scheduling_event.hpp  system_event.cpp  system_event.hpp  system_monitoring_event.cpp  system_monitoring_event.hpp
src/matb/algorithm/matb_event_server/: CMakeLists.txt  matb_event_server.cpp  matb_event_server.hpp
src/matb/algorithm/resource_management_task/: CMakeLists.txt  resource_management_task.cpp  resource_management_task.hpp
src/matb/algorithm/scheduling_display/: CMakeLists.txt  scheduling_display.cpp  scheduling_display.hpp
src/matb/algorithm/system_monitoring_task/: CMakeLists.txt  system_monitoring_task.cpp  system_monitoring_task.hpp
src/matb/algorithm/tracking_task/: CMakeLists.txt  tracking_task.cpp  tracking_task.hpp
src/matb/module/: CMakeLists.txt
src/matb/module/matb_module/: CMakeLists.txt  matb_module.cpp  matb_module.hpp
src/matb/service/: CMakeLists.txt
src/matb/service/matb/: CMakeLists.txt  main.cpp
src/matb/service/matb_viewer/: CMakeLists.txt  main.cpp
src/matb/thread/: CMakeLists.txt
src/matb/thread/communications_task_thread/: CMakeLists.txt  communications_task_thread.cpp  communications_task_thread.hpp
src/matb/thread/resource_management_task_thread/: CMakeLists.txt  resource_management_task_thread.cpp  resource_management_task_thread.hpp
src/matb/thread/scheduling_display_thread/: CMakeLists.txt  scheduling_display_thread.cpp  scheduling_display_thread.hpp
src/matb/thread/system_monitoring_task_thread/: CMakeLists.txt  (+2 more)
src/matb/thread/tracking_task_thread/: CMakeLists.txt  tracking_task_thread.cpp  tracking_task_thread.hpp
src/matb/yarp_subscriber/: CMakeLists.txt
src/matb/yarp_subscriber/joystick_axis_subscriber/: CMakeLists.txt  joystick_axis_subscriber.cpp  joystick_axis_subscriber.hpp
src/yarp/: CMakeLists.txt
src/yarp/rosmsg/: CMakeLists.txt  TickDuration.h  TickTime.h  package.xml
src/yarp/rosmsg/actionlib_msgs/: GoalID.h  GoalStatus.h  GoalStatusArray.h
src/yarp/rosmsg/diagnostic_msgs/: AddDiagnostics.h  AddDiagnosticsReply.h  DiagnosticArray.h  DiagnosticStatus.h  KeyValue.h  SelfTest.h  SelfTestReply.h
src/yarp/rosmsg/geometry_msgs/: Accel.h  AccelStamped.h  AccelWithCovariance.h  AccelWithCovarianceStamped.h  Inertia.h  InertiaStamped.h  Point.h  Point32.h  PointStamped.h  Polygon.h  PolygonStamped.h  Pose.h  Pose2D.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  PoseWithCovarianceStamped.h  Quaternion.h  QuaternionStamped.h  Transform.h  TransformStamped.h  Twist.h  TwistStamped.h  TwistWithCovariance.h  TwistWithCovarianceStamped.h  Vector3.h  Vector3Stamped.h  Wrench.h  WrenchStamped.h
src/yarp/rosmsg/impl/: yarpRosHelper.h
src/yarp/rosmsg/matb_msgs/: CMakeLists.txt  Comm.h  Point2D.h  Points.h  Points2D.h  QKey.h  Resman.h  Strings.h  Sysmon.h  Tracking.h
src/yarp/rosmsg/msg/: Comm.msg  Points.msg  Points2D.msg  QKey.msg  Resman.msg  Sysmon.msg  Tracking.msg
src/yarp/rosmsg/msg_checker/: CMakeLists.txt  main.cpp
src/yarp/rosmsg/nav_msgs/: GetMap.h  GetMapReply.h  GetPlan.h  GetPlanReply.h  GridCells.h  MapMetaData.h  OccupancyGrid.h  Odometry.h  Path.h  SetMap.h  SetMapReply.h
src/yarp/rosmsg/sensor_msgs/: BatteryState.h  CameraInfo.h  ChannelFloat32.h  CompressedImage.h  FluidPressure.h  Illuminance.h  Image.h  Imu.h  JointState.h  Joy.h  JoyFeedback.h  JoyFeedbackArray.h  LaserEcho.h  LaserScan.h  MagneticField.h  MultiDOFJointState.h  MultiEchoLaserScan.h  NavSatFix.h  NavSatStatus.h  PointCloud.h  PointCloud2.h  PointField.h  Range.h  RegionOfInterest.h  RelativeHumidity.h  SetCameraInfo.h  SetCameraInfoReply.h  Temperature.h  TimeReference.h
src/yarp/rosmsg/shape_msgs/: Mesh.h  MeshTriangle.h  Plane.h  SolidPrimitive.h
src/yarp/rosmsg/std_msgs/: Bool.h  Byte.h  ByteMultiArray.h  Char.h  ColorRGBA.h  Duration.h  Empty.h  Float32.h  Float32MultiArray.h  Float64.h  Float64MultiArray.h  Header.h  Int16.h  Int16MultiArray.h  Int32.h  Int32MultiArray.h  Int64.h  Int64MultiArray.h  Int8.h  Int8MultiArray.h  MultiArrayDimension.h  MultiArrayLayout.h  String.h  Time.h  UInt16.h  UInt16MultiArray.h  UInt32.h  UInt32MultiArray.h  UInt64.h  UInt64MultiArray.h  UInt8.h  UInt8MultiArray.h
src/yarp/rosmsg/stereo_msgs/: DisparityImage.h
src/yarp/rosmsg/tf/: FrameGraph.h  FrameGraphReply.h  tfMessage.h
src/yarp/rosmsg/tf2_msgs/: FrameGraph.h  FrameGraphReply.h  TF2Error.h  TFMessage.h
src/yarp/rosmsg/trajectory_msgs/: JointTrajectory.h  JointTrajectoryPoint.h  MultiDOFJointTrajectory.h  MultiDOFJointTrajectoryPoint.h
src/yarp/rosmsg/visualization_msgs/: ImageMarker.h  InteractiveMarker.h  InteractiveMarkerControl.h  InteractiveMarkerFeedback.h  InteractiveMarkerInit.h  InteractiveMarkerPose.h  InteractiveMarkerUpdate.h  Marker.h  MarkerArray.h  MenuEntry.h
(+6 files in other folders)
