<?xml version="1.0"?>
<!-- <package> -->
<package format="2">
  <name>sscr_msgs</name>
  <version>0.1.0</version>
  <description>sscr_msgs project</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="mot-aoki@mail.nissan.co.jp">Motonobu Aoki</maintainer>
  <license>Nissan Closed</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
